--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSP to allow Twitch iframes and scripts -->
+    <meta http-equiv="Content-Security-Policy" content="frame-src https://player.twitch.tv; default-src 'self'; img-src *; style-src 'self' https://cdn.tailwindcss.com 'unsafe-inline'; script-src 'self' https://cdn.tailwindcss.com https://embed.twitch.tv 'unsafe-inline'">
     <title>Avalanche! [aV!] - TRIBES 3: Rivals</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <style>
-        /* Custom CSS for glowing effects and animations */
+        /* Custom CSS for glowing effects, animations, and parallax */
         .glow-text {
             text-shadow: 0 0 10px rgba(239, 68, 68, 0.8), 0 0 20px rgba(239, 68, 68, 0.6);
         }
@@ -19,7 +22,7 @@
         .hover-scale:hover {
             transform: scale(1.05);
         }
-        /* Animated background gradient */
+        /* Animated background gradient for body */
         .gradient-bg {
             background: linear-gradient(45deg, #2d1a1a, #4a2c2c, #ef4444, #2d1a1a);
             background-size: 400%;
@@ -30,19 +33,72 @@
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
-        /* Responsive iframe for Twitch video */
-        .twitch-embed {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 0;
-            overflow: hidden;
+        /* Stream container and box styling from multidisplay */
+        .stream-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            gap: 10px;
+            height: auto;
+            box-sizing: border-box;
+            padding: 10px;
         }
-        .twitch-embed iframe {
+        .stream-box {
+            position: relative;
+            background-color: #2d3748;
+            border-radius: 8px;
+            overflow: hidden;
+            height: 300px;
+        }
+        .stream-label {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 5px 10px;
+            border-radius: 4px;
+            font-size: 14px;
+            font-weight: bold;
+            color: #f87171; /* Light red to match theme */
+        }
+        .stream-player {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+        /* Parallax background styles */
+        .parallax-hero {
+            background-image: url('https://github.com/T24085/Team-Avalanche/blob/main/3.jpg?raw=true');
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
+        .parallax-roster {
+            background-image: url('https://github.com/T24085/Team-Avalanche/blob/main/2.jpg?raw=true');
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
+        /* Overlay for readability */
+        .parallax-overlay {
+            background: rgba(0, 0, 0, 0.7);
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+        }
+        /* Responsive adjustments from multidisplay */
+        @media (max-width: 1000px) {
+            .stream-container {
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            }
+            .stream-box {
+                height: 250px;
+            }
         }
     </style>
 </head>
@@ -58,44 +114,36 @@
             <nav>
                 <ul class="flex space-x-6">
                     <li><a href="#home" class="hover:text-red-400 transition">Home</a></li>
-                    <li><a href="#featured" class="hover:text-red-400 transition">Featured</a></li>
-                    <li><a href="#roster" class="hover:text-red-400 transition">Roster</a></li>
                     <li><a href="#streams" class="hover:text-red-400 transition">Streams</a></li>
+                    <li><a href="#roster" class="hover:text-red-400 transition">Roster</a></li>
                     <li><a href="#about" class="hover:text-red-400 transition">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <section id="home" class="py-20 text-center">
-        <div class="container mx-auto px-4">
+    <!-- Hero Section with Parallax Background -->
+    <section id="home" class="parallax-hero py-20 text-center relative">
+        <div class="parallax-overlay"></div>
+        <div class="container mx-auto px-4 relative z-10">
             <h2 class="text-5xl font-extrabold mb-4 glow-text">Welcome to Avalanche!</h2>
             <p class="text-xl mb-8">Dominating the Wilderzone in TRIBES 3: Rivals with jetpacks, skiing, and unmatched teamwork.</p>
             <a href="https://store.steampowered.com/app/2687970/TRIBES_3_Rivals/" target="_blank" class="bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-6 rounded-lg glow-border hover-scale">Play TRIBES 3: Rivals</a>
         </div>
     </section>
 
-    <!-- Featured Video Section -->
-    <section id="featured" class="py-16 bg-gray-800 bg-opacity-80">
+    <!-- Featured Streams Section -->
+    <section id="streams" class="py-16 bg-gray-800 bg-opacity-80">
         <div class="container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-12 glow-text">Featured Match</h2>
-            <div class="max-w-4xl mx-auto twitch-embed glow-border">
-                <iframe
-                    src="https://player.twitch.tv/?video=2477408852&parent=localhost"
-                    frameborder="0"
-                    allowfullscreen="true"
-                    scrolling="no"
-                    height="100%"
-                    width="100%">
-                </iframe>
-            </div>
+            <h2 class="text-4xl font-bold text-center mb-12 glow-text">Featured Streams</h2>
+            <div id="stream-container" class="stream-container"></div>
         </div>
     </section>
 
-    <!-- Roster Section -->
-    <section id="roster" class="py-16">
-        <div class="container mx-auto px-4">
+    <!-- Roster Section with Parallax Background -->
+    <section id="roster" class="parallax-roster py-16 relative">
+        <div class="parallax-overlay"></div>
+        <div class="container mx-auto px-4 relative z-10">
             <h2 class="text-4xl font-bold text-center mb-12 glow-text">Team Roster</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Captain -->
@@ -137,35 +185,6 @@
         </div>
     </section>
 
-    <!-- Streams Section -->
-    <section id="streams" class="py-16">
-        <div class="container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-12 glow-text">Live Streams</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-gray-900 p-6 rounded-lg glow-border hover-scale">
-                    <h3 class="text-xl font-semibold">Wriggles</h3>
-                    <a href="https://www.twitch.tv/wrigglespk" target="_blank" class="text-red-400 hover:text-red-300">twitch.tv/wrigglespk</a>
-                </div>
-                <div class="bg-gray-900 p-6 rounded-lg glow-border hover-scale">
-                    <h3 class="text-xl font-semibold">TritiumJones</h3>
-                    <a href="https://www.twitch.tv/tritiumjones" target="_blank" class="text-red-400 hover:text-red-300">twitch.tv/tritiumjones</a>
-                </div>
-                <div class="bg-gray-900 p-6 rounded-lg glow-border hover-scale">
-                    <h3 class="text-xl font-semibold">Dean</h3>
-                    <a href="https://www.twitch.tv/wholuvsdean" target="_blank" class="text-red-400 hover:text-red-300">twitch.tv/wholuvsdean</a>
-                </div>
-                <div class="bg-gray-900 p-6 rounded-lg glow-border hover-scale">
-                    <h3 class="text-xl font-semibold">PROJ</h3>
-                    <a href="https://www.twitch.tv/prj_tv" target="_blank" class="text-red-400 hover:text-red-300">twitch.tv/prj_tv</a>
-                </div>
-                <div class="bg-gray-900 p-6 rounded-lg glow-border hover-scale">
-                    <h3 class="text-xl font-semibold">Ggglygy</h3>
-                    <a href="https://www.twitch.tv/ggglygy" target="_blank" class="text-red-400 hover:text-red-300">twitch.tv/ggglygy</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- About Section -->
     <section id="about" class="py-16 bg-gray-800 bg-opacity-80">
         <div class="container mx-auto px-4 text-center">
@@ -182,5 +201,44 @@
             <p>Follow us on <a href="https://x.com/Avalanche" target="_blank" class="text-red-400 hover:text-red-300">@Avalanche</a></p>
         </div>
     </footer>
+
+    <!-- JavaScript for Twitch Streams -->
+    <script>
+        // Define Avalanche channels
+        let channels = [
+            'wrigglespk',
+            'tritiumjones',
+            'wholuvsdean',
+            'prj_tv',
+            'ggglygy'
+        ].sort(); // Sort alphabetically
+
+        // Render streams
+        function renderStreams() {
+            const streamContainer = document.getElementById('stream-container');
+            streamContainer.innerHTML = '';
+
+            channels.forEach((channel, index) => {
+                const streamIndex = index + 1;
+                const streamBox = document.createElement('div');
+                streamBox.className = 'stream-box';
+                streamBox.id = `stream-${streamIndex}`;
+                streamBox.innerHTML = `
+                    <div class="stream-label">${channel}</div>
+                    <iframe
+                        class="stream-player"
+                        src="https://player.twitch.tv/?channel=${encodeURIComponent(channel)}&parent=${window.location.hostname}"
+                        frameborder="0"
+                        allowfullscreen="true"
+                        scrolling="no">
+                    </iframe>
+                `;
+                streamContainer.appendChild(streamBox);
+            });
+        }
+
+        // Initialize streams on page load
+        document.addEventListener('DOMContentLoaded', renderStreams);
+    </script>
 </body>
 </html>
