--- a/index.html
+++ b/index.html
@@ -21,16 +21,11 @@
         .hover-scale:hover {
             transform: scale(1.05);
         }
-        /* Animated background gradient for body */
+        /* Tiled logo background */
         .gradient-bg {
-            background: linear-gradient(45deg, #2d1a1a, #4a2c2c, #ef4444, #2d1a1a);
-            background-size: 400%;
-            animation: gradient 15s ease infinite;
-        }
-        @keyframes gradient {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+            background-image: url('https://github.com/T24085/TribesTeams/blob/main/aV!.png?raw=true');
+            background-repeat: repeat;
+            background-size: 100px;
         }
         /* Stream container styling */
         .stream-container {
@@ -126,7 +121,7 @@
         <div class="container mx-auto px-4">
             <h2 class="text-4xl font-bold text-center mb-12 glow-text">Featured Video</h2>
             <div class="video-container mx-auto max-w-4xl">
-                <iframe src="https://player.twitch.tv/?video=2477408852&parent=localhost" frameborder="0" allowfullscreen="true" scrolling="no"></iframe>
+                <iframe src="https://www.youtube.com/embed/_JEVCnINCKk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
