--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Captain -->
                 <div class="bg-gray-900 p-6 rounded-lg glow-border hover-scale">
-                    <h3 class="text-2xl font-semibold glow-text">@92</h3>
+                    <h3 class="text-2xl font-semibold glow-text">@Tritium Jones</h3>
                     <p class="text-red-400">Captain (returns w/o concs)</p>
                 </div>
                 <!-- Core Members -->
@@ -214,7 +214,7 @@
     <section id="about" class="py-16 bg-gray-800 bg-opacity-80">
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-4xl font-bold mb-8 glow-text">About Avalanche!</h2>
-            <p class="text-lg mb-4">Avalanche! [aV!] is a premier competitive team in *TRIBES 3: Rivals*, known for their high-speed gameplay and tactical prowess. Led by Captain @92, our roster combines veteran skill with dynamic energy to dominate the battlefield.</p>
+            <p class="text-lg mb-4">Avalanche! [aV!] is a premier competitive team in *TRIBES 3: Rivals*, known for their high-speed gameplay and tactical prowess. Led by Captain @Tritium Jones, our roster combines veteran skill with dynamic energy to dominate the battlefield.</p>
             <p class="text-lg">Join us on Twitch to catch our live matches and follow our journey in the Wilderzone!</p>
         </div>
     </section>
